レイアウト修正

--- a/app/views/layouts/_left.html.erb
+++ b/app/views/layouts/_left.html.erb
@@ -1,12 +1,12 @@
-<div class="col-3" style="background-color: aqua;">
+<div class="col-3">
     <div class="gest">
         <div class="box7">
-            <p>ゲストアカウント</p>
+            <p>アカウント情報</p>
         </div>
     </div>
     <div class="recomendgame">
         <div class="box7">
-            <p>おすすめゲーム</p>
+            <p>おすすめゲーム一覧</p>
         </div>
     </div>
     <div class="tag">
