--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,10 @@
-<h1>Sample App</h1>
-
 <body>
   <div class="container">
     <div class="row">
 
 <%= render 'layouts/left' %>
 
-<div class="col-6" style="background-color: brown;">
+<div class="col-6">
   <div class="box6">
     <p>投稿一覧</p>
   </div>
