--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,3 +82,11 @@ footer {
     border: solid 3px #000000;
     background-color: #ffffff;
 }
+
+.box8 {
+    padding: 250px 1px;
+    margin: 10px 0;
+    background: #f0f7ff;
+    border: dashed 2px #5b8bd0;
+    /*点線*/
+}
