--- a/app/views/layouts/_right.html.erb
+++ b/app/views/layouts/_right.html.erb
@@ -1,7 +1,14 @@
 <div class="col-3">
   <div class="box1">
-      <p>新規登録</p>
+      <p>GameBoradを使ってゲームの攻略情報を手に入れよう！</p>
+      <p>初めての方はこちら</p>
+      <%= link_to "新規会員登録(無料)",signup_path , class: 'btn btn-primary btn-block' %>
+      <br>
+      <p>会員の方はこちら</p>
+      <%= link_to "ログイン",'#' , class: 'btn btn-default btn-block'%>
+      
   </div>
+
   <div class="rank">
     <div class="box1">
       <p>ゲームランキング|iPhone</p>
