--- a/app/views/layouts/_right.html.erb
+++ b/app/views/layouts/_right.html.erb
@@ -1,11 +1,14 @@
 <div class="col-3">
-  <div class="box1">
-      <p>GameBoradを使ってゲームの攻略情報を手に入れよう！</p>
+  <div class="border border-dark" style="padding: 15px;">
+      <div class="d-flex align-items-start">
+            GameBoradを使ってゲームの攻略情報を手に入れよう！
+      </div>
+      <br>
       <p>初めての方はこちら</p>
-      <%= link_to "新規会員登録(無料)",signup_path , class: 'btn btn-primary btn-block' %>
+      <%= link_to "無料会員登録",signup_path , class: 'btn btn-primary btn-block' %>
       <br>
       <p>会員の方はこちら</p>
-      <%= link_to "ログイン",'#' , class: 'btn btn-default btn-block'%>
+      <%= link_to "ログイン",'#' , class: 'btn btn-primary btn-block' %>
       
   </div>
 
