--- a/app/views/layouts/_left.html.erb
+++ b/app/views/layouts/_left.html.erb
@@ -1,17 +1,8 @@
-<div class="col-3">
-    <div class="gest">
-        <div class="box7">
-            <p>アカウント情報</p>
-        </div>
-    </div>
-    <div class="recomendgame">
-        <div class="box7">
-            <p>おすすめゲーム一覧</p>
-        </div>
-    </div>
-    <div class="tag">
-        <div class="box7">
-            <p>掲示板タグ一覧</p>
-        </div>
-    </div>
+<div class="col-lg-3">
+<%= render 'layouts/left_account' %>
+
+<%= render 'layouts/left_reccomend' %>
+
+<%= render 'layouts/left_tag' %>
+
 </div>
