--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,17 @@
 <body>
-  <div class="container">
-    <div class="row">
+    <div class="container">
+        <div class="row">
 
-<%= render 'layouts/left' %>
+            <%= render 'layouts/left' %>
+        
+            <div class="col-lg-6">
+                <div class="box1">
+                    <p>投稿一覧</p>
+                </div>
+            </div>
 
-<div class="col-6">
-  <div class="box6">
-    <p>投稿一覧</p>
-  </div>
-</div>
-
-<%= render 'layouts/right' %>
-
-  </div>
-  </div>
+            <%= render 'layouts/right' %>
+            
+        </div>
+    </div>
 </body>
