--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-6 offset-3">
+            <div class="col-lg-6 offset-lg-3">
                 <h2>登録フォーム</h2>
                 <%= form_for(@user) do |f| %>
 
@@ -24,8 +24,9 @@
                     <%= f.label :password_confirmation, 'パスワード（もう１度ご入力ください）' %>
                     <%= f.password_field :password_confirmation, class: 'form-control' %>
                 </div>
-
+                <div class="col-lg-8 offset-lg-2">
                 <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
+                </div>
                 <% end %>
             </div>
         </div>
