--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import './sessions';
 
 header {
     padding-bottom: 10px;
@@ -6,60 +7,6 @@ header {
 
 footer {
     padding-top: 10px;
-}
-
-.box7 {
-    padding: 120px 1px;
-    margin: 10px 0;
-    color: #474747;
-    background: whitesmoke;
-    /*背景色*/
-    border-left: double 7px #4ec4d3;
-    /*左線*/
-    border-right: double 7px #4ec4d3;
-    /*右線*/
-}
-
-.box7 p {
-    margin: 0;
-    padding: 0;
-}
-
-.recomendgame {
-    padding: 240px 1px;
-    margin: 10px 0;
-    color: #474747;
-    background: whitesmoke;
-    /*背景色*/
-    border-left: double 7px #4ec4d3;
-    /*左線*/
-    border-right: double 7px #4ec4d3;
-    /*右線*/
-}
-
-.tag {
-    padding: 240px 1px;
-    margin: 10px 0;
-    color: #474747;
-    background: whitesmoke;
-    /*背景色*/
-    border-left: double 7px #4ec4d3;
-    /*左線*/
-    border-right: double 7px #4ec4d3;
-    /*右線*/
-}
-
-.box6 {
-    padding: 1000px 1px;
-    margin: 10px 0;
-    background: #f0f7ff;
-    border: dashed 2px #5b8bd0;
-    /*点線*/
-}
-
-.box6 p {
-    margin: 0;
-    padding: 0;
 }
 
 .box1 {
@@ -73,20 +20,4 @@ footer {
 .box1 p {
     margin: 0;
     padding: 0;
-}
-
-.rank {
-    padding: 240px 1px;
-    margin: 10px 0;
-    font-weight: bold;
-    border: solid 3px #000000;
-    background-color: #ffffff;
-}
-
-.box8 {
-    padding: 250px 1px;
-    margin: 10px 0;
-    background: #f0f7ff;
-    border: dashed 2px #5b8bd0;
-    /*点線*/
 }
