--- a/app/views/layouts/_right.html.erb
+++ b/app/views/layouts/_right.html.erb
@@ -1,25 +1,9 @@
-<div class="col-3">
-  <div class="border border-dark" style="padding: 15px;">
-      <div class="d-flex align-items-start">
-            GameBoradを使ってゲームの攻略情報を手に入れよう！
-      </div>
-      <br>
-      <p>初めての方はこちら</p>
-      <%= link_to "無料会員登録",signup_path , class: 'btn btn-primary btn-block' %>
-      <br>
-      <p>会員の方はこちら</p>
-      <%= link_to "ログイン",'#' , class: 'btn btn-primary btn-block' %>
-      
-  </div>
+<div class="col-lg-3">
 
-  <div class="rank">
-    <div class="box1">
-      <p>ゲームランキング|iPhone</p>
-    </div>
-  </div>
-  <div class="rank">
-    <div class="box1">
-      <p>ゲームランキング|Android</p>
-    </div>
-  </div>
+<%= render 'layouts/right_login' %>
+
+<%= render 'layouts/right_iPhone' %>
+
+<%= render 'layouts/right_Android' %>
+
 </div>
