--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,16 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
+                <ul class="navbar-nav mr-auto">
+                <% if logged_in? %>
+                <li class="nav-item">
+                    <%= link_to "ログアウト",logout_path,class: "nav-link", method: :delete %>
+                </li>
+                <% else%>
+                <%end%>
                     <input class="form-control mr-sm-2" type="search" placeholder="キーワードで検索" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </ul>
                 </form>
             </div>
         </div>
