--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,9 +9,15 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <%= link_to "新規登録", signup_path,class: "nav-link"  %>
+                    <% if logged_in? %>
+                        <li class="nav-item">
+                        <%= link_to "プロフィール", current_user, class: "nav-link" %>
+                    <% else %>
+                        <li class="nav-item">
+                        <%= link_to "新規登録", signup_path, class: "nav-link"  %>
                     </li>
+
+                    <% end %>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                 <ul class="navbar-nav mr-auto">
