--- a/app/views/layouts/_right.html.erb
+++ b/app/views/layouts/_right.html.erb
@@ -1,6 +1,8 @@
 <div class="col-lg-3">
-
-<%= render 'layouts/right_login' %>
+<% if logged_in? %>
+<% else %>
+ <%= render 'layouts/right_login' %>
+<% end %>
 
 <%= render 'layouts/right_iPhone' %>
 
