--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,30 @@
-<%= @user.id %>
-<%= @user.name %>
-<%= @user.email %>
+<% @user  = User.find(session[:user_id]) %>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-9">
+                <div class="box1">
+                    <p>プロフィール</p>
+                    <%= @user.name%>
+                    <br>
+                    <%= @user.email%>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="box1">
+                            <p>おすすめゲーム</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="box1">
+                            <p>自身の投稿一覧</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <%= render 'layouts/right' %>
+        </div>
+    </div>
+</body>
