掲示板のモデルとコントローラー作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,11 +4,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-9">
-                <div class="box1">
-                    <p>プロフィール</p>
-                    <%= @user.name%>
-                    <br>
-                    <%= @user.email%>
+                <div class="box2">
+                    <div class="row">
+                        <div class="col-4">
+                            <%= image_tag 'usersample.png' %>
+                        </div>
+                        <div class="col-4">
+                            <h2>プロフィール</h2><%= @user.name%>
+                        </div>
+                        <div class="col-4">
+                            <h2>email</h2><%= @user.email%>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
@@ -23,7 +30,6 @@
                     </div>
                 </div>
             </div>
-
             <%= render 'layouts/right' %>
         </div>
     </div>
