--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,19 @@ footer {
     padding: 0;
 }
 
+.box2 {
+    padding: 10px 1px;
+    margin: 10px 0;
+    font-weight: bold;
+    border: solid 3px #000000;
+    background-color: #ffffff;
+}
+
+.box2 p {
+    margin: 0;
+    padding: 0;
+}
+
 #error_explanation {
     color: red;
 
