--- a/app/views/layouts/_left_account.html.erb
+++ b/app/views/layouts/_left_account.html.erb
@@ -1,6 +1,9 @@
+<% @user  = User.find(session[:user_id]) %>
+
 <% if logged_in? %>
 <div class="box1">
-<p>ログイン中</p>
+<p>プロフィール：<%= @user.name %></p>
+<%= link_to "プロフィール画面",user_path(@user.id) , class: 'btn btn-primary btn-block d-flex' %>
 </div>
 <% else %>
 <div class="box1">
