--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,16 +5,17 @@ header {
     padding-bottom: 10px;
 }
 
-footer {
-    padding-top: 10px;
+body {
+    padding-bottom: 60px;
 }
 
 .box1 {
-    padding: 120px 1px;
+    padding: 10px 1px;
     margin: 10px 0;
     font-weight: bold;
     border: solid 3px #000000;
     background-color: #ffffff;
+    padding-bottom: 120px;
 }
 
 .box1 p {
@@ -43,3 +44,21 @@ footer {
         margin: 0 0 30px 0;
     }
 }
+
+
+/*ページネーション自体のデザイン*/
+.pagination>li>a {          
+    border: none;     /*枠線をなくす*/
+    color: #696969;   /*文字の色を変える*/
+  }
+  
+  /* 表示しているページ番号のデザイン */
+  .pagination>.active>a {     
+    background: #93c9ff;     /*背景の色を変える*/
+    border-radius: 15px;     /*角を丸くする*/
+  }
+  
+  /*ホバー時のデザイン*/
+  .pagination>li>a:hover {        
+    border-radius: 15px;    /*角を丸くする*/
+  }
