--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,5 +1,11 @@
-  <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-  <span class="content"><%= micropost.content %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-  </span>
+<div class="box1">
+    <span class="user">
+        ユーザー名：<%= link_to board.user.name, board.user %></span>
+    <br>
+    <span class="content">
+        タイトル：<%= board.content %></span>
+    <br>
+    <span class="timestamp">
+        投稿時間：<%= time_ago_in_words(board.created_at) %>
+    </span>
+</div>
