--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-bottom">
+<footer class="fixed-bottom">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
             <%= link_to "GameBoard", root_path,class: "navbar-brand" %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -9,3 +9,4 @@
         </div>
     </nav>
 </footer>
+
