--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,20 @@ body {
     padding-bottom: 60px;
 }
 
+h2 {
+    padding: 12px;
+    background: #444;
+    font-size: 16px;
+    color: #fff;
+    font-weight: 700;
+}
+
+
+.box {
+    margin-bottom: 20px;
+    padding: 0 10px 10px 10px;
+}
+
 .box1 {
     padding: 10px 1px;
     margin: 10px 0;
@@ -24,7 +38,7 @@ body {
 }
 
 .box2 {
-    padding: 10px 1px;
+    padding: 10px 0;
     margin: 10px 0;
     font-weight: bold;
     border: solid 3px #000000;
@@ -35,6 +49,15 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.box3 {
+    padding: 0 0 10px 0;
+    margin: 15px 0;
+    font-weight: bold;
+    border: solid 3px #000000;
+    background-color: #ffffff;
+}
+
 
 #error_explanation {
     color: red;
