掲示板削除途中

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -8,4 +8,7 @@
     <span class="timestamp">
         投稿時間：<%= time_ago_in_words(board.created_at) %>
     </span>
+    <br>
+    <span class="user">
+    <% link_to '削除',board_path(board.id), method: :delete%>
 </div>
