--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
                     <div class="box3">
                         <h2>投稿フォーム</h2>
                         <div class="mx-5">
-                            <%= link_to "いまなにしていますか？",'#', class: 'btn btn-outline-secondary btn-block' %>
+                            <%= link_to "いまなにしていますか？",boards_path, class: 'btn btn-outline-secondary btn-block' %>
                         </div>
                     </div>
                     <div class="box3">
