--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,16 +5,13 @@
                 <h2>登録フォーム</h2>
                 <%= form_for(@user) do |f| %>
                 <%= render 'shared/error_messages' %>
-
                 <div class="form-group">
                     <%= f.label :name, 'ニックネーム' %>
                     <%= f.text_field :name, class: 'form-control' %>
                 </div>
-
                 <div class="form-group">
                     <%= f.label :email, 'メールアドレス' %>
-                    <%= f.email_field :email, class: 'form-control' %>
-                </div>
+                    <%= f.email_field :email, class: 'form-control' %> </div>
 
                 <div class="form-group">
                     <%= f.label :password, 'パスワード' %>
@@ -26,7 +23,7 @@
                     <%= f.password_field :password_confirmation, class: 'form-control' %>
                 </div>
                 <div class="col-lg-8 offset-lg-2">
-                <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
+                    <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
                 </div>
                 <% end %>
             </div>
