--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,1 @@
-<body>
-    <div class="container">
-        <div class="row">
-            <%= render 'layouts/left' %>
-            <div class="col-lg-6">
-                <div class="box1">
-                    <p>投稿一覧</p>
-                </div>
-            </div>
-            <%= render 'layouts/right' %>
-        </div>
-    </div>
-</body>
+<h1>LPページ</h1>
