--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,18 +25,25 @@
                     <div class="box3">
                         <h2>投稿フォーム</h2>
                         <div class="mx-5">
-                            <%= link_to "いまなにしていますか？",boards_path, class: 'btn btn-outline-secondary btn-block' %>
+                            <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block' %>
                         </div>
                     </div>
                     <div class="box3">
                         <% if @user.boards.any? %>
-                        <h2>投稿一覧</h2>
+                         <h2>投稿一覧</h2>
                         <%= paginate @boards %>
                         <div class="mx-1">
                             <%= render @boards %>
-                            <% end %>
                         </div>
                         <%= paginate @boards %>
+                        <% else %>
+                        <h2>投稿一覧</h2>
+                        <div class="mx-1">
+                            <div class="box1 pb-4">
+                                まだ投稿はありません。
+                            </div>
+                        </div>
+                        <% end %>
                     </div>
                 </div>
             </div>
@@ -44,4 +51,3 @@
         <%= render 'layouts/right' %>
     </div>
 </div>
-
