一覧修正、検索機能

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,6 +1,6 @@
 <div class="box3">
    <span class="user">
-        ユーザー名：<%= link_to board.user.name,user_path %>
+        ユーザー名：<%= link_to board.user.name,user_path(id: board.user_id) %>
     </span>
     <br>
     <span class="content">
