--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,13 +4,13 @@
         <div class="col-lg-9">
             <div class="box2">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <%= image_tag 'usersample.png',size: '150x150'%>
                     </div>
-                    <div class="col-5">
+                    <div class="col-lg-5">
                         <h2>プロフィール</h2><%= @user.name%>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <h2>email</h2><%= @user.email%>
                     </div>
                 </div>
