--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -8,19 +8,9 @@
                 <h2>投稿一覧</h2>
                 投稿が一覧表示される
                 <br>
-                テスト：<%= @user.name%>
-                <% @board.length.times do |num|%>
-                <% if @board.find_by_id(num).nil? %>
-                <% else %>
-                <div class="box1">
-                    ユーザーID：<%= @board.find_by_id(num)[:user_id] %>
-                    <br>
-                    <span class="content">
-                        タイトル： <%=  @board.find_by_id(num)[:title] %>
-                    </span>
-                    <br>
-                </div>
-                <% end %>
+                <%= paginate @boards %>
+                <% @boards.each do |board|%>
+                <%= render board %>
                 <% end %>
             </div>
             <%= render 'layouts/right' %>
