--- a/app/views/layouts/_left.html.erb
+++ b/app/views/layouts/_left.html.erb
@@ -1,8 +1,7 @@
 <div class="col-lg-3">
-<%= render 'layouts/left_account' %>
-
-<%= render 'layouts/left_reccomend' %>
-
-<%= render 'layouts/left_tag' %>
-
+    <%= render 'layouts/left_account' %>
+    <%= render 'layouts/left_reccomend' %>
+    <div class="d-none d-lg-block">
+        <%= render 'layouts/left_tag' %>
+    </div>
 </div>
