--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,14 @@
-<h1>static_pages/home.html.erb</h1>
+<body>
+    <div class="container">
+        <div class="row">
+            <%= render 'layouts/left' %>
+            <div class="col-lg-6">
+                <div class="box1">
+                    <h2>static_pages/home.html.erb</h2>
+                    ランディングページにします。
+                </div>
+            </div>
+            <%= render 'layouts/right' %>
+        </div>
+    </div>
+</body>
