--- a/app/views/layouts/_right.html.erb
+++ b/app/views/layouts/_right.html.erb
@@ -1,11 +1,9 @@
 <div class="col-lg-3">
-<% if logged_in? %>
-<% else %>
- <%= render 'layouts/right_login' %>
-<% end %>
-
-<%= render 'layouts/right_iPhone' %>
-
-<%= render 'layouts/right_Android' %>
-
+    <% if logged_in? %>
+    <% else %>
+    <%= render 'layouts/right_login' %>
+    <% end %>
+    <%= render 'layouts/right_iPhone' %>
+    <%= render 'layouts/right_Android' %>
+</div>
 </div>
