--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
-                <h2>登録フォーム</h2>
+                <h2>投稿フォーム</h2>
                 <%= form_for(@board) do |f| %>
                 <%= render 'shared/error_messages' %>
 
@@ -15,8 +15,19 @@
                     <%= f.text_area :content, class: 'form-control' %>
                 </div>
 
+                <div class='form-group'>
+                    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+                    <div class='form-check'>
+                        <%= tag.label class: 'form-check-label' do %>
+                        <%= tag.check_box class: 'form-check-input' %>
+                        <%= tag.text %>
+                    </div>
+                    <% end %>
+                    <% end %>
+                </div>
+
                 <div class="col-lg-8 offset-lg-2">
-                <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
+                    <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
                 </div>
                 <% end %>
             </div>
