--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -4,6 +4,15 @@
             <%= render 'layouts/left' %>
             <div class="col-lg-6">
                 <h2>投稿一覧</h2>
+                <%= form_tag boards_path, method: :get, class: 'boards__searchForm' do %>
+                <%= select_tag :tag_id,
+                     options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
+                     {
+                       prompt: 'タグで絞り込み検索',
+                       onchange: 'submit(this.form);'
+                     }
+                %>
+                <% end %>
                 <%= paginate @boards %>
                 <% @boards.each do |board|%>
                 <%= render board %>
