--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,13 @@
-<h2>コメント一覧</h2>
+<% if false %>
+
 <!--@article.commentsで該当する記事のコメント一覧を取得-->
 <% @board.comments.each do |comment| %>
-<p>タイトル</p>
-<p><%= comment.title %></p>
 <p>内容</p>
 <p><%= comment.content %></p>
 <!--article_comment_pathヘルパーには親(article)と子(comment)を両方渡す-->
-<p><%= link_to '削除',article_comment_path(@board,comment),
-                          method: :delete,data: {confirm:'削除してもよろしいですか？'}%></p>
+<% binding pry %>
+<p><%= link_to '削除',board_comment_path(@board,comment),
+                          action: :delete,data: {confirm:'削除してもよろしいですか？'}%></p>
+<% end %>
+
 <% end %>
