--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,15 +1,7 @@
 <h2>コメントを入力</h2>
 <!--引数の順番は親、子-->
 <%= form_for ([@board,@comment]) do |f| %>
-<p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %><br />
-</p>
-<p>
-    <%= f.label :content %><br />
-    <%= f.text_area :content %><br />
-</p>
-<p>
-    <%= f.submit "送信" %>
-</p>
+<%= f.label :content %><br>
+<%= f.text_area :content, class: "form-control", size: "10x5" %><br>
+<%= f.submit "送信", class: "btn btn-primary btn-block"%>
 <%end%>
