--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -3,20 +3,18 @@
         <div class="row">
             <%= render 'layouts/left' %>
             <div class="col-lg-6">
+                <div class="box3">
+                    <h2>投稿フォーム</h2>
+                    <div class="mx-5">
+                        <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block' %>
+                    </div>
+                </div>
                 <h2>投稿一覧</h2>
-                <%= form_tag boards_path, method: :get, class: 'boards__searchForm' do %>
-                <%= select_tag :tag_id,
-                     options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
-                     {
-                       prompt: 'タグで絞り込み検索',
-                       onchange: 'submit(this.form);'
-                     }
-                %>
-                <% end %>
                 <%= paginate @boards %>
                 <% @boards.each do |board|%>
                 <%= render board %>
                 <% end %>
+                <%= paginate @boards %>
             </div>
             <%= render 'layouts/right' %>
         </div>
