--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,49 +6,56 @@
                     <div class="col-lg-3">
                         <%= image_tag 'usersample.png',size: '150x150'%>
                     </div>
-                    <div class="col-lg-5">
-                        <h2>プロフィール</h2><%= @user.name%>
-                    </div>
-                    <div class="col-lg-4">
-                        <h2>email</h2><%= @user.email%>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="box1">
-                        <h2>おすすめゲーム</h2>
-                    </div>
-                </div>
-                <div class="col-lg-8">
-                    <% if @user.id = current_user.id %>
-                    <div class="box3">
-                        <h2>投稿フォーム</h2>
-                        <%= @user.id %>
-                        <%= current_user.id %>
-                        <div class="mx-5">
-                            <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block' %>
+                    <div class="col-lg-9">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h2>名前</h2><%= @user.name%>
+                            </div>
+                            <div class="col-lg-6">
+                                <h2>email</h2><%= @user.email%>
+                            </div>
+                        </div>
+                        <div>
+                            <h2 class="mt-2">自己紹介文</h2>
+                            <p><%= @user.profile %></p>
+                            <%= link_to "プロフィール編集",edit_user_path,class: 'btn btn-outline-secondary btn-block' %>
+                        </div>
                         </div>
                     </div>
-                    <% end %>
-                    <% if @user.boards.any? %>
-                    <h2>投稿一覧</h2>
-                    <%= paginate @boards %>
-                    <div class="mx-1">
-                        <%= render @boards %>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="box1">
+                            <h2>おすすめゲーム</h2>
+                        </div>
                     </div>
-                    <%= paginate @boards %>
-                    <% else %>
-                    <h2>投稿一覧</h2>
-                    <div class="mx-1">
-                        <div class="box1 pb-4">
-                            まだ投稿はありません。
+                    <div class="col-lg-8">
+                        <% if @user.id == current_user.id %>
+                        <div class="box3">
+                            <h2>投稿フォーム</h2>
+                            <div class="mx-5">
+                                <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block' %>
+                            </div>
                         </div>
                         <% end %>
+                        <% if @user.boards.any? %>
+                        <h2>投稿一覧</h2>
+                        <%= paginate @boards %>
+                        <div class="mx-1">
+                            <%= render @boards %>
+                        </div>
+                        <%= paginate @boards %>
+                        <% else %>
+                        <h2>投稿一覧</h2>
+                        <div class="mx-1">
+                            <div class="box1 pb-4">
+                                まだ投稿はありません。
+                            </div>
+                            <% end %>
+                        </div>
                     </div>
                 </div>
+                <%= render 'layouts/right' %>
             </div>
-            <%= render 'layouts/right' %>
         </div>
     </div>
-</div>
