スタイル調整、seed調整

--- a/app/views/layouts/_left_account.html.erb
+++ b/app/views/layouts/_left_account.html.erb
@@ -4,7 +4,7 @@
     <p>ユーザー名：<%= @user.name %></p>
     <div class="row">
         <div class="col-10 offset-1">
-            <%= link_to "プロフィール",user_path(@user.id) , class: 'btn btn-outline-primary btn-block'%>
+            <%= link_to "プロフィール",user_path(@user.id) , class: 'btn btn-outline-primary btn-block mb-3'%>
         </div>
     </div>
 </div>
