--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,8 +51,8 @@ h2 {
 }
 
 .box3 {
-    padding: 0 0 10px 0;
-    margin: 15px 0;
+    padding: 0;
+    margin-top:  10px;
     font-weight: bold;
     border: solid 3px #000000;
     background-color: #ffffff;
