--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -24,6 +24,7 @@
                     <% end %>
                     <% end %>
                 </div>
+                <% binding.pry %>
                 <div class="col-lg-8 offset-lg-2">
                     <%= f.submit '編集する', class: 'btn btn-primary btn-block' %>
                 </div>
