--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -6,7 +6,7 @@
                 <div class="box3">
                     <h2>投稿フォーム</h2>
                     <div class="mx-5">
-                        <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block' %>
+                        <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block my-3' %>
                     </div>
                 </div>
                 <h2>投稿一覧</h2>
