--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,50 +12,50 @@
                                 <h2 class="mr-2">名前</h2><%= @user.name%>
                             </div>
                             <div class="col-lg-6">
-                                <h2  class="mr-2">email</h2><%= @user.email%>
+                                <h2 class="mr-2">email</h2><%= @user.email%>
                             </div>
                         </div>
                         <div>
                             <h2 class="mr-2 mt-2">自己紹介文</h2>
                             <p><%= @user.profile %></p>
-                            <%= link_to "プロフィール編集",edit_user_path,class: 'btn btn-outline-secondary btn-block' %>
-                        </div>
+                            <div class="row col-6 offset-3">
+                            <%= link_to "プロフィール編集",edit_user_path,class: 'btn btn-outline-secondary btn-block my-2' %>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="box1">
-                            <h2>おすすめゲーム</h2>
-                        </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="box1">
+                        <h2>おすすめゲーム</h2>
                     </div>
-                    <div class="col-lg-8">
-                        <% if @user.id == current_user.id %>
-                        <div class="box3 mb-3">
-                            <h2>投稿フォーム</h2>
-                            <div class="mx-5">
-                                <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block my-3' %>
-                            </div>
+                </div>
+                <div class="col-lg-8">
+                    <% if @user.id == current_user.id %>
+                    <h2 class="mb-3">投稿フォーム</h2>
+                    <div class="mx-5">
+                        <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block my-3' %>
+                    </div>
+                    <% end %>
+                    <% if @user.boards.any? %>
+                    <h2>投稿一覧</h2>
+                    <%= paginate @boards %>
+                    <div class="mx-1">
+                        <%= render @boards %>
+                    </div>
+                    <%= paginate @boards %>
+                    <% else %>
+                    <h2>投稿一覧</h2>
+                    <div class="mx-1">
+                        <div class="box1 pb-4">
+                            まだ投稿はありません。
                         </div>
                         <% end %>
-                        <% if @user.boards.any? %>
-                        <h2>投稿一覧</h2>
-                        <%= paginate @boards %>
-                        <div class="mx-1">
-                            <%= render @boards %>
-                        </div>
-                        <%= paginate @boards %>
-                        <% else %>
-                        <h2>投稿一覧</h2>
-                        <div class="mx-1">
-                            <div class="box1 pb-4">
-                                まだ投稿はありません。
-                            </div>
-                            <% end %>
-                        </div>
                     </div>
                 </div>
-                <%= render 'layouts/right' %>
             </div>
+            <%= render 'layouts/right' %>
         </div>
     </div>
+</div>
