--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -3,31 +3,7 @@
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
                 <h2>編集フォーム</h2>
-                <%= form_for @board, url: board_path do |f| %>
-                <%= render 'shared/error_messages' %>
-                <div class="form-group">
-                    <%= f.label :title, 'タイトル' %>
-                    <%= f.text_field :title, class: 'form-control' %>
-                </div>
-                <div class="form-group">
-                    <%= f.label :content, '本文' %>
-                    <%= f.text_area :content, class: 'form-control' %>
-                </div>
-
-                <div class='form-group'>
-                    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
-                    <div class='form-check'>
-                        <%= tag.label class: 'form-check-label' do %>
-                        <%= tag.check_box class: 'form-check-input' %>
-                        <%= tag.text %>
-                    </div>
-                    <% end %>
-                    <% end %>
-                </div>
-                <div class="col-lg-8 offset-lg-2">
-                    <%= f.submit '編集する', class: 'btn btn-primary btn-block' %>
-                </div>
-                <% end %>
+                <%= render 'form_board'%>
             </div>
         </div>
     </div>
