--- a/app/views/users/_form_user.html.erb
+++ b/app/views/users/_form_user.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@user) do |f| %>
+
 <%= render 'shared/error_messages' %>
 <div class="form-group">
     <%= f.label :name, 'ニックネーム' %>
@@ -6,7 +7,8 @@
 </div>
 <div class="form-group">
     <%= f.label :email, 'メールアドレス' %>
-    <%= f.email_field :email, class: 'form-control' %> </div>
+    <%= f.email_field :email, class: 'form-control' %>
+</div>
 
 <div class="form-group">
     <%= f.label :content, '自己紹介文' %>
