--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,20 +1,21 @@
 <div class="box3 mb-3">
-    <span class="user">ユーザー名：<%= link_to board.user.name,user_path(id: board.user_id) %></span>
-    <span class="content">タイトル：<%= board.title %></span>
-    <span class="timestamp">投稿日時：<%= board.created_at.to_s(:datetime_jp) %></span>
+    <div class="user">ユーザー名：<%= link_to board.user.name,user_path(id: board.user_id) %></div>
+    <div class="content">タイトル：<%= board.title %></div>
+    <div class="timestamp">投稿日時：<%= board.created_at.to_s(:datetime_jp) %></div>
     <% if board.tags.present? %>
-    <span class="tag">タグ：<% board.tags.each do |tag| %></span>
-    <span class='badge badge-primary'><%= tag.name %></span>
+    <div>
+        <span class="tag">タグ：<% board.tags.each do |tag| %></span>
+        <span class='badge badge-primary'><%= tag.name %></span>
+        <% end %>
+    </div>
     <% end %>
-    <% else %>
     <span class="content">本文： <%= board.content %></span>
-    <% end %>
     <div class="my-4">
-        <% @likes_count = Favorite.where(board_id: board.id).count%>
+        <% @likes_count = Favorite.where(board_id: board.id).count %>
         <span class="content">いいね数：<%= @likes_count %></span>
     </div>
     <div>
-        <% favorite = Favorite.find_by(board_id: board.id)%>
+        <% favorite = Favorite.find_by(board_id: board.id) %>
         <% if favorite.nil? %>
         <%= link_to "いいねします", add_board_path(board), method: :post %>
         <% else %>
@@ -26,9 +27,9 @@
         <% end %>
     </div>
     <div class="mx-5">
-        <%= link_to "詳細" ,"/boards/#{board.id}", class: 'btn btn-outline-primary btn-block my-2'%>
+        <%= link_to "詳細" ,"/boards/#{board.id}", class: 'btn btn-outline-primary btn-block my-2' %>
         <% if board.user_id == current_user.id %>
-        <%= link_to "編集" ,"/boards/#{board.id}/edit", class: 'btn btn-outline-primary btn-block my-1'%>
+        <%= link_to "編集" ,"/boards/#{board.id}/edit", class: 'btn btn-outline-primary btn-block my-1' %>
         <%= link_to "削除" ,"/boards/#{board.id}", :method => :delete, class: 'btn btn-outline-secondary btn-block my-3',data: { confirm: '削除しますか？' } %>
         <% else %>
         <% end %>
