--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -3,24 +3,24 @@
         <div class="row">
             <%= render 'layouts/left' %>
             <div class="col-lg-6">
-            
+
                 <h2>投稿詳細</h2>
-                <%= render 'board', board: @board%>
+                <%= render 'board', board: @board %>
                 <%= render "comments/form" %>
-                
+
                 <h2 class="mt-3">コメント一覧</h2>
                 <% @comments.each do |comment| %>
                 <div class="box3">
-                    <span class="content">ユーザー名：<%= comment.user.name %></span>
-                    <span class="content">コメント：<%= comment.content %></span>
-                    <% if comment.user_id == current_user.id %>
-                    <%= button_to "削除", board_comment_path(comment), method: :delete, class: 'btn btn-outline-secondary btn-block my-3',data: { confirm: '削除しますか？' } %>
+                    <div>ユーザー名：<%= comment.user.name %></div>
+                    <div>コメント：<%= comment.content %></div>
+                        <% if comment.user_id == current_user.id %>
+                        <%= button_to "削除", board_comment_path(comment), method: :delete, class: 'btn btn-outline-secondary btn-block my-3',data: { confirm: '削除しますか？' } %>
+                        <% end %>
+                    </div>
                     <% end %>
-                </div>
-                <% end %>
 
+                </div>
+                <%= render 'layouts/right' %>
             </div>
-            <%= render 'layouts/right' %>
         </div>
-    </div>
 </body>
